<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horisontal_margin1"
    android:paddingRight="@dimen/horisontal_margin1"
    android:paddingTop="@dimen/vertical_margin"
    tools:context="com.student.muhammadrizqi.ankocommons.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFF"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_username_main"
            android:hint="@string/username"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_password_main"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_main"
            android:text="@string/login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_accont_main"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimaryDark"/>



    </LinearLayout>
</RelativeLayout>
